src/objects/Financials_Source__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_And_Liability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset And Liability</label>
        <referenceTo>Asset_And_Liability__c</referenceTo>
        <relationshipLabel>Financials Sources</relationshipLabel>
        <relationshipName>Financials_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Statements_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statements Sub Category</label>
        <referenceTo>click_Bank_Statements_Sub_Category__c</referenceTo>
        <relationshipLabel>Financials Sources</relationshipLabel>
        <relationshipName>Financials_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Loans_Required_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Click Loans Required Document</label>
        <referenceTo>Required_Document__c</referenceTo>
        <relationshipLabel>Financials Sources</relationshipLabel>
        <relationshipName>Financials_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_And_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income And Expense</label>
        <referenceTo>Income_And_Expense__c</referenceTo>
        <relationshipLabel>Financials Sources</relationshipLabel>
        <relationshipName>Financials_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPData</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM User Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner User Input</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Financials Source</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>